--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand logo" [routerLink]="['/home']">Logo</a>
 
-    <div class="nav-item dropdown ml-auto" *ngIf="!username">
+    <div class="nav-item dropdown ml-auto" *ngIf="publicKey">
       <a
         class="nav-link dropdown-toggle pointer"
         role="button"
@@ -11,25 +11,6 @@
         aria-expanded="false"
       >
         My account
-      </a>
-      <div
-        class="dropdown-menu dropdown-menu-right"
-        aria-labelledby="navbarDropdown"
-      >
-        <a class="dropdown-item pointer">Register</a>
-        <a class="dropdown-item pointer" [routerLink]="['/login']">Login</a>
-      </div>
-    </div>
-
-    <div class="nav-item dropdown ml-auto" *ngIf="username">
-      <a
-        class="nav-link dropdown-toggle pointer"
-        role="button"
-        data-toggle="dropdown"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
-        {{ username }}
       </a>
       <div
         class="dropdown-menu dropdown-menu-right"
