--- a/front-end/src/app/components/login/login.component.scss
+++ b/front-end/src/app/components/login/login.component.scss
@@ -9,7 +9,7 @@
 
 .container-login {
   width: 100%;
-  margin-top: 80px;
+  margin-top: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,4 +30,8 @@
   width: 420px;
   font-size: 15px;
   color: #666666;
+}
+
+.create-wallet {
+  cursor: pointer;
 }
